--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sunoaziss</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+         background: #000000;
+         color: rgb(0, 0, 0);
+        }
+       </style>
 </head>
 <body>
     <h1>Добро пожаловать на мой сайт!</h1>
-    <p>Топ 3 концептуальных произведений:   <br/>
-        1. Umineko no Naku Koro ni          <br/>
-        2. Disco Elysium                    <br/>        
-        3. NLC 7                            <br/>
-        4. Girls last tour                  <br/>
-        
-        Надеюсь понятно, что со мной лучше не связываться?</p>
-    <img src="nlcimage.jpg" alt="Изображение">
+    <p>Топ 3 концептуальных произведений:   <br/>   
+    <p1>      NLC 7                    </p1><br/>
+    </p>
+    <img src="nlcinvert.jpg" alt="Изображение">
     <script src="script.js"></script>
 </body>
 </html>
